welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:2: error: not found: value c
  faireV(c)
         ^