welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  faireV(c)
  
}

def faireV(c: Color){
  avance()
  
  setCouleurBrosse(c)
  
  baisseBrosse()
  leveBrosse()
  
  avance()
  gauche()
  avance()
  
  baisseBrosse()
  leveBrosse()
  
  recule()
  droite()
  avance()
  
  baisseBrosse()
  leveBrosse()
  
  avance()
  gauche()
}